--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,6 @@
 $light-color:#f4f4f4;
 $primary-color: #2bbacb;
-$secondary-color: #cb61a0;
+$secondary-color: #3F3D56;
 $main-blue: #0e6cff;
 $main-white: #fff;
 //$primary-color: #cb61a0;
