--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,12 +1,13 @@
-$light-color:#f4f4f4;
 $primary-color: #2bbacb;
-$secondary-color: #3F3D56;
-$main-blue: #0e6cff;
+$secondary-color: #1c1d3e;
+$light-white:#f4f4f4;
 $main-white: #fff;
 //$primary-color: #cb61a0;
 //$secondary-color: #78428d;
 $dark-black: #151618;
-$light-black: #181D20;
+$light-black: #1c1d3e;
+$lighter-black: #5f5f5f;
+
 
 //set text color based on bg
 
