--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -140,7 +140,7 @@
 }
 
 .btn-secondary {
-  background-color: #3F3D56;
+  background-color: #1c1d3e;
   color: #fff;
 }
 
@@ -250,7 +250,7 @@ html {
 }
 
 body {
-  background: #f2ecec;
+  background: #fbfbfb;
   font-family: "Nunito", sans-serif;
   line-height: 1.6;
 }
@@ -267,12 +267,12 @@ a {
   text-decoration: none;
 }
 
-.header__wrapper {
-  width: 100%;
+.header {
+  margin: 0 auto;
   height: 70px;
 }
 
-.header__show {
+.header__main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -286,15 +286,13 @@ a {
   max-width: 2000px;
   background-color: transparent;
   height: 70px;
-  color: #3F3D56;
-  margin: 0 auto;
+  color: #1c1d3e;
   z-index: 3;
 }
 
-.header__hide {
+.header__slide__down {
   position: fixed;
   top: 0%;
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -304,8 +302,8 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 100%;
   max-width: 2000px;
+  width: 100%;
   height: 70px;
   background-color: #fff;
   color: #151618;
@@ -320,7 +318,7 @@ a {
           transform: translate(-50%, 0);
 }
 
-.header__hide li:hover::before {
+.header__slide__down li:hover::before {
   content: "[";
   -webkit-animation: left-bracket;
           animation: left-bracket;
@@ -334,7 +332,7 @@ a {
   color: #151618;
 }
 
-.header__hide li:hover::after {
+.header__slide__down li:hover::after {
   content: "]";
   color: #151618;
   -webkit-animation: right-bracket;
@@ -347,6 +345,64 @@ a {
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   color: #151618;
+}
+
+.header__logo {
+  margin: 0 24px;
+  width: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__links {
+  padding: 0;
+  margin: 0 24px;
+}
+
+.header__link__item {
+  display: inline-block;
+  padding: 8px;
+  margin: 0 12px;
+  cursor: pointer;
+}
+
+.header li {
+  position: relative;
+}
+
+.header li:hover::before {
+  content: "[";
+  color: #1c1d3e;
+  -webkit-animation: left-bracket;
+          animation: left-bracket;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+  position: absolute;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.header li:hover::after {
+  content: "]";
+  color: #1c1d3e;
+  -webkit-animation: right-bracket;
+          animation: right-bracket;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+  position: absolute;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes navbar-slice-down {
@@ -373,63 +429,6 @@ a {
   100% {
     background-color: #fff;
   }
-}
-
-.header__logo {
-  margin: 0 24px;
-  max-width: 48px;
-  min-width: 35px;
-}
-
-.header__links {
-  padding: 0;
-  margin: 0 24px;
-}
-
-.header__link__item {
-  display: inline-block;
-  padding: 8px;
-  margin: 0 12px;
-  cursor: pointer;
-}
-
-ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style-type: none;
-}
-
-li {
-  position: relative;
-}
-
-li:hover::before {
-  content: "[";
-  color: #3F3D56;
-  -webkit-animation: left-bracket;
-          animation: left-bracket;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  position: absolute;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-li:hover::after {
-  content: "]";
-  color: #3F3D56;
-  -webkit-animation: right-bracket;
-          animation: right-bracket;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  position: absolute;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes left-bracket {
@@ -493,7 +492,7 @@ li:hover::after {
 }
 
 .showcase__content {
-  padding: 2% 0 2%;
+  padding: 4% 0 4%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -504,52 +503,51 @@ li:hover::after {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
-  max-width: 1200px;
-  width: 100%;
+  max-width: 1140px;
+  border: 1px solid red;
+}
+
+.showcase__content__svg {
+  width: 50%;
+  padding: 2%;
+  text-align: center;
 }
 
 .showcase__content__title {
+  width: 50%;
+  padding: 2%;
+}
+
+.showcase__content__title h1 {
+  font-weight: bold;
+  color: #1c1d3e;
   font-size: 3.8em;
+  font-style: normal;
   line-height: 1.2;
 }
 
-.showcase__content__two {
-  padding: 0 0 2%;
+.showcase__content__title h2 {
+  color: #5f5f5f;
+  font-size: 1rem;
+  line-height: 2rem;
+  padding: 16px 0;
+}
+
+.showcase__content__email {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  margin: 0 auto;
-  max-width: 1200px;
-  color: #3F3D56;
+  padding: 8px 0;
 }
 
-.showcase__content__two__text {
-  width: 60%;
-  font-size: 1.5rem;
-}
-
-.showcase__content__two__email {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #f1f1f1;
-  padding: 2% 0 0;
-}
-
-.showcase__content__two__email input[type=text], .showcase__content__two__email input[type=submit] {
+.showcase__content__email input[type=text], .showcase__content__email input[type=submit] {
   width: 70%;
   padding: 12px;
   display: inline-block;
   border: 1px solid #ccc;
 }
 
-.showcase__content__two__email input[type=submit] {
+.showcase__content__email input[type=submit] {
   background-color: #2bbacb;
   color: white;
   border: none;
@@ -558,8 +556,60 @@ li:hover::after {
   cursor: pointer;
 }
 
-.showcase__content__two__email input[type=submit]:hover {
+.showcase__content__email input[type=submit]:hover {
   opacity: 0.8;
+}
+
+.flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+}
+
+.flex-item:nth-child(1) {
+  padding: 32px;
+  margin: 32px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  width: 280px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.flex-item:nth-child(2) {
+  padding: 32px;
+  margin: 32px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  width: 280px;
+  text-align: center;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.flex-item:nth-child(3) {
+  width: 280px;
+  text-align: center;
+  padding: 32px;
+  margin: 32px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .main-title {
@@ -719,95 +769,242 @@ li:hover::after {
   text-align: right;
 }
 
-#GearBig {
-  -webkit-animation: gear 6s infinite linear;
-          animation: gear 6s infinite linear;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  transform-box: fill-box;
+#red__circle {
+  -webkit-animation: change-color  3s linear 2s infinite alternate;
+          animation: change-color  3s linear 2s infinite alternate;
 }
 
-@-webkit-keyframes gear {
+@-webkit-keyframes change-color {
   0% {
-    -webkit-transform: rotateZ(0deg);
-            transform: rotateZ(0deg);
+    fill: #E7515C;
   }
   100% {
-    -webkit-transform: rotateZ(360deg);
-            transform: rotateZ(360deg);
+    fill: #AE3C43;
   }
 }
 
-@keyframes gear {
+@keyframes change-color {
   0% {
-    -webkit-transform: rotateZ(0deg);
-            transform: rotateZ(0deg);
+    fill: #E7515C;
   }
   100% {
-    -webkit-transform: rotateZ(360deg);
-            transform: rotateZ(360deg);
+    fill: #AE3C43;
   }
 }
 
-#gearSmall {
-  -webkit-animation: gearTwo 6s infinite linear;
-          animation: gearTwo 6s infinite linear;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  transform-box: fill-box;
+#blue__circle {
+  -webkit-animation: change-color-blue  1s linear 2s infinite alternate;
+          animation: change-color-blue  1s linear 2s infinite alternate;
 }
 
-@-webkit-keyframes gearTwo {
+@-webkit-keyframes change-color-blue {
   0% {
-    -webkit-transform: rotateZ(360deg);
-            transform: rotateZ(360deg);
+    fill: #508EBC;
   }
   100% {
-    -webkit-transform: rotateZ(0deg);
-            transform: rotateZ(0deg);
+    fill: #67C1EF;
   }
 }
 
-@keyframes gearTwo {
+@keyframes change-color-blue {
   0% {
-    -webkit-transform: rotateZ(360deg);
-            transform: rotateZ(360deg);
+    fill: #508EBC;
   }
   100% {
-    -webkit-transform: rotateZ(0deg);
-            transform: rotateZ(0deg);
+    fill: #67C1EF;
   }
 }
 
-#righthandLaptop {
-  -webkit-animation: hands 1s ease-in-out infinite alternate;
-          animation: hands 1s ease-in-out infinite alternate;
-  transform-box: fill-box;
+#light__blue__circle {
+  -webkit-animation: change-color-blue-light  1s linear 2s infinite alternate;
+          animation: change-color-blue-light  1s linear 2s infinite alternate;
 }
 
-@-webkit-keyframes hands {
+@-webkit-keyframes change-color-blue-light {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    fill: #67C1EF;
   }
   100% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-    -webkit-transform-origin: 60% 40%;
-            transform-origin: 60% 40%;
+    fill: #508EBC;
   }
 }
 
-@keyframes hands {
+@keyframes change-color-blue-light {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    fill: #67C1EF;
   }
   100% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-    -webkit-transform-origin: 60% 40%;
-            transform-origin: 60% 40%;
+    fill: #508EBC;
+  }
+}
+
+#text1, #text6 {
+  -webkit-animation: change-color-paragraph  1s linear 2s infinite alternate;
+          animation: change-color-paragraph  1s linear 2s infinite alternate;
+}
+
+#text2, #text3 {
+  -webkit-animation: change-color-paragraph  3s linear 2s infinite alternate;
+          animation: change-color-paragraph  3s linear 2s infinite alternate;
+}
+
+#text4, #text5 {
+  -webkit-animation: change-color-paragraph  3s linear 2s infinite alternate;
+          animation: change-color-paragraph  3s linear 2s infinite alternate;
+}
+
+@-webkit-keyframes change-color-paragraph {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508EBC;
+  }
+}
+
+@keyframes change-color-paragraph {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508EBC;
+  }
+}
+
+#graph__column__one {
+  -webkit-animation: change-color-graph  3s linear 2s infinite alternate;
+          animation: change-color-graph  3s linear 2s infinite alternate;
+}
+
+@-webkit-keyframes change-color-graph {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #AE3C43;
+  }
+}
+
+@keyframes change-color-graph {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #AE3C43;
+  }
+}
+
+#graph__column__two {
+  -webkit-animation: change-color-graph-two  3s linear 3s infinite alternate;
+          animation: change-color-graph-two  3s linear 3s infinite alternate;
+}
+
+@-webkit-keyframes change-color-graph-two {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #E7515C;
+  }
+}
+
+@keyframes change-color-graph-two {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #E7515C;
+  }
+}
+
+#graph__column__three, #graph__column__four, #graph__column__five {
+  -webkit-animation: change-color-graph-three  3s linear 1s infinite alternate;
+          animation: change-color-graph-three  3s linear 1s infinite alternate;
+}
+
+#graph__column__four {
+  -webkit-animation: change-color-graph-three  4s linear 2s infinite alternate;
+          animation: change-color-graph-three  4s linear 2s infinite alternate;
+}
+
+#graph__column__five {
+  -webkit-animation: change-color-graph-three  6s linear 1s infinite alternate;
+          animation: change-color-graph-three  6s linear 1s infinite alternate;
+}
+
+@-webkit-keyframes change-color-graph-three {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #f1b17d;
+  }
+}
+
+@keyframes change-color-graph-three {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #f1b17d;
+  }
+}
+
+#graph__column__six, #graph__column__seven {
+  -webkit-animation: change-color-graph-four  6s linear 1s infinite alternate;
+          animation: change-color-graph-four  6s linear 1s infinite alternate;
+}
+
+@-webkit-keyframes change-color-graph-four {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508EBC;
+  }
+}
+
+@keyframes change-color-graph-four {
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508EBC;
+  }
+}
+
+#light__bulb {
+  -webkit-animation: change-color-bulb  3s linear 1s infinite alternate;
+          animation: change-color-bulb  3s linear 1s infinite alternate;
+}
+
+@-webkit-keyframes change-color-bulb {
+  0% {
+    fill: #ff7f8e;
+  }
+  25% {
+    fill: #ff7f8e;
+  }
+  50% {
+    fill: #fff174;
+  }
+  100% {
+    fill: #fff174;
+  }
+}
+
+@keyframes change-color-bulb {
+  0% {
+    fill: #ff7f8e;
+  }
+  25% {
+    fill: #ff7f8e;
+  }
+  50% {
+    fill: #fff174;
+  }
+  100% {
+    fill: #fff174;
   }
 }
 /*# sourceMappingURL=styles.css.map */
