three columns done

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,11 @@
 $primary-color: #2bbacb;
 $secondary-color: #1c1d3e;
+$light-red: #E7515C;
+$dark-red: #AE3C43;
+$light-blue: #67C1EF;
+$dark-blue: #508EBC;
 $light-white:#f4f4f4;
+$light-gray: #B3B3B3;
 $main-white: #fff;
 //$primary-color: #cb61a0;
 //$secondary-color: #78428d;
