--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -5,7 +5,7 @@ $dark-red: #AE3C43;
 $light-blue: #67C1EF;
 $dark-blue: #508EBC;
 $light-white:#f4f4f4;
-$light-gray: #B3B3B3;
+$light-gray: #7d8693;
 $main-white: #fff;
 //$primary-color: #cb61a0;
 //$secondary-color: #78428d;
