--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -255,10 +255,6 @@ body {
   line-height: 1.6;
 }
 
-img {
-  width: 100%;
-}
-
 a {
   text-decoration: none;
 }
@@ -504,13 +500,12 @@ a {
 
 .showcase__content__svg {
   width: 50%;
-  padding: 2%;
   text-align: center;
 }
 
 .showcase__content__title {
   width: 50%;
-  padding: 2%;
+  padding: 20px;
 }
 
 .showcase__content__title h1 {
@@ -534,14 +529,15 @@ a {
   padding: 8px 0;
 }
 
-.showcase__content__email input[type=text], .showcase__content__email input[type=submit] {
+.showcase__content__email input[type="text"],
+.showcase__content__email input[type="submit"] {
   width: 70%;
   padding: 12px;
   display: inline-block;
   border: 1px solid #ccc;
 }
 
-.showcase__content__email input[type=submit] {
+.showcase__content__email input[type="submit"] {
   background-color: #508EBC;
   color: white;
   border: none;
@@ -550,7 +546,7 @@ a {
   cursor: pointer;
 }
 
-.showcase__content__email input[type=submit]:hover {
+.showcase__content__email input[type="submit"]:hover {
   opacity: 0.8;
 }
 
@@ -558,19 +554,15 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  -ms-flex-line-pack: stretch;
-      align-content: stretch;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 1140px;
+  padding: 32px 0;
 }
 
 .three__card__container__wrapper {
@@ -578,7 +570,7 @@ a {
   margin: 32px;
   background-color: #fff;
   border-radius: 0.5rem;
-  width: 300px;
+  width: 320px;
   height: 480px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -601,13 +593,13 @@ a {
 }
 
 .three__card__container h3 {
-  color: #AE3C43;
+  color: #ae3c43;
   padding: 8px 0;
   font-weight: 600;
 }
 
 .three__card__container h6 {
-  color: #B3B3B3;
+  color: #7d8693;
   padding: 8px 0;
   font-weight: 600;
   text-decoration: underline;
@@ -616,6 +608,135 @@ a {
 
 .three__card__container p {
   padding: 8px 0;
+}
+
+#rocket {
+  -webkit-animation: topBottom 5s infinite;
+          animation: topBottom 5s infinite;
+}
+
+@-webkit-keyframes topBottom {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, -200px);
+            transform: translate(0, -200px);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes topBottom {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, -200px);
+            transform: translate(0, -200px);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+#circle {
+  -webkit-animation-name: rotateme;
+          animation-name: rotateme;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
+
+@-webkit-keyframes rotateme {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotateme {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.design__section {
+  max-width: 2000px;
+}
+
+.design__section img {
+  width: 100%;
+  display: block;
+}
+
+.design__section__title {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #7d8693;
+}
+
+.design__section__subtitle {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.design__section__line {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.design__section__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 32px;
+}
+
+.design__section__container__half {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.design__section__container__half__top__left {
+  padding: 0 8px 8px 16px;
+}
+
+.design__section__container__half__bottom__left {
+  padding: 8px 8px 0 16px;
+}
+
+.design__section__container__half__top__right {
+  padding: 0px 8px 8px 8px;
+}
+
+.design__section__container__half__bottom__right {
+  padding: 8px 8px 0 8px;
 }
 
 .main-title {
@@ -776,87 +897,90 @@ a {
 }
 
 #red__circle {
-  -webkit-animation: change-color  3s linear 2s infinite alternate;
-          animation: change-color  3s linear 2s infinite alternate;
+  -webkit-animation: change-color 3s linear 2s infinite alternate;
+          animation: change-color 3s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes change-color {
   0% {
-    fill: #E7515C;
+    fill: #e7515c;
   }
   100% {
-    fill: #AE3C43;
+    fill: #ae3c43;
   }
 }
 
 @keyframes change-color {
   0% {
-    fill: #E7515C;
+    fill: #e7515c;
   }
   100% {
-    fill: #AE3C43;
+    fill: #ae3c43;
   }
 }
 
 #blue__circle {
-  -webkit-animation: change-color-blue  1s linear 2s infinite alternate;
-          animation: change-color-blue  1s linear 2s infinite alternate;
+  -webkit-animation: change-color-blue 1s linear 2s infinite alternate;
+          animation: change-color-blue 1s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes change-color-blue {
   0% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
   100% {
-    fill: #67C1EF;
+    fill: #67c1ef;
   }
 }
 
 @keyframes change-color-blue {
   0% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
   100% {
-    fill: #67C1EF;
+    fill: #67c1ef;
   }
 }
 
 #light__blue__circle {
-  -webkit-animation: change-color-blue-light  1s linear 2s infinite alternate;
-          animation: change-color-blue-light  1s linear 2s infinite alternate;
+  -webkit-animation: change-color-blue-light 1s linear 2s infinite alternate;
+          animation: change-color-blue-light 1s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes change-color-blue-light {
   0% {
-    fill: #67C1EF;
+    fill: #67c1ef;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
 @keyframes change-color-blue-light {
   0% {
-    fill: #67C1EF;
+    fill: #67c1ef;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
-#text1, #text6 {
-  -webkit-animation: change-color-paragraph  1s linear 2s infinite alternate;
-          animation: change-color-paragraph  1s linear 2s infinite alternate;
+#text1,
+#text6 {
+  -webkit-animation: change-color-paragraph 1s linear 2s infinite alternate;
+          animation: change-color-paragraph 1s linear 2s infinite alternate;
 }
 
-#text2, #text3 {
-  -webkit-animation: change-color-paragraph  3s linear 2s infinite alternate;
-          animation: change-color-paragraph  3s linear 2s infinite alternate;
+#text2,
+#text3 {
+  -webkit-animation: change-color-paragraph 3s linear 2s infinite alternate;
+          animation: change-color-paragraph 3s linear 2s infinite alternate;
 }
 
-#text4, #text5 {
-  -webkit-animation: change-color-paragraph  3s linear 2s infinite alternate;
-          animation: change-color-paragraph  3s linear 2s infinite alternate;
+#text4,
+#text5 {
+  -webkit-animation: change-color-paragraph 3s linear 2s infinite alternate;
+          animation: change-color-paragraph 3s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes change-color-paragraph {
@@ -864,7 +988,7 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
@@ -873,13 +997,13 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
 #graph__column__one {
-  -webkit-animation: change-color-graph  3s linear 2s infinite alternate;
-          animation: change-color-graph  3s linear 2s infinite alternate;
+  -webkit-animation: change-color-graph 3s linear 2s infinite alternate;
+          animation: change-color-graph 3s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes change-color-graph {
@@ -887,7 +1011,7 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #AE3C43;
+    fill: #ae3c43;
   }
 }
 
@@ -896,13 +1020,13 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #AE3C43;
+    fill: #ae3c43;
   }
 }
 
 #graph__column__two {
-  -webkit-animation: change-color-graph-two  3s linear 3s infinite alternate;
-          animation: change-color-graph-two  3s linear 3s infinite alternate;
+  -webkit-animation: change-color-graph-two 3s linear 3s infinite alternate;
+          animation: change-color-graph-two 3s linear 3s infinite alternate;
 }
 
 @-webkit-keyframes change-color-graph-two {
@@ -910,7 +1034,7 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #E7515C;
+    fill: #e7515c;
   }
 }
 
@@ -919,23 +1043,25 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #E7515C;
+    fill: #e7515c;
   }
 }
 
-#graph__column__three, #graph__column__four, #graph__column__five {
-  -webkit-animation: change-color-graph-three  3s linear 1s infinite alternate;
-          animation: change-color-graph-three  3s linear 1s infinite alternate;
+#graph__column__three,
+#graph__column__four,
+#graph__column__five {
+  -webkit-animation: change-color-graph-three 3s linear 1s infinite alternate;
+          animation: change-color-graph-three 3s linear 1s infinite alternate;
 }
 
 #graph__column__four {
-  -webkit-animation: change-color-graph-three  4s linear 2s infinite alternate;
-          animation: change-color-graph-three  4s linear 2s infinite alternate;
+  -webkit-animation: change-color-graph-three 4s linear 2s infinite alternate;
+          animation: change-color-graph-three 4s linear 2s infinite alternate;
 }
 
 #graph__column__five {
-  -webkit-animation: change-color-graph-three  6s linear 1s infinite alternate;
-          animation: change-color-graph-three  6s linear 1s infinite alternate;
+  -webkit-animation: change-color-graph-three 6s linear 1s infinite alternate;
+          animation: change-color-graph-three 6s linear 1s infinite alternate;
 }
 
 @-webkit-keyframes change-color-graph-three {
@@ -956,9 +1082,10 @@ a {
   }
 }
 
-#graph__column__six, #graph__column__seven {
-  -webkit-animation: change-color-graph-four  6s linear 1s infinite alternate;
-          animation: change-color-graph-four  6s linear 1s infinite alternate;
+#graph__column__six,
+#graph__column__seven {
+  -webkit-animation: change-color-graph-four 6s linear 1s infinite alternate;
+          animation: change-color-graph-four 6s linear 1s infinite alternate;
 }
 
 @-webkit-keyframes change-color-graph-four {
@@ -966,7 +1093,7 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
@@ -975,13 +1102,13 @@ a {
     fill: #dce6f4;
   }
   100% {
-    fill: #508EBC;
+    fill: #508ebc;
   }
 }
 
 #light__bulb {
-  -webkit-animation: change-color-bulb  3s linear 1s infinite alternate;
-          animation: change-color-bulb  3s linear 1s infinite alternate;
+  -webkit-animation: change-color-bulb 3s linear 1s infinite alternate;
+          animation: change-color-bulb 3s linear 1s infinite alternate;
 }
 
 @-webkit-keyframes change-color-bulb {
