--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -106,9 +106,9 @@ body {
   font-family: "Nunito", sans-serif;
   line-height: 1.6;
 }
-img {
-  width: 100%;
-}
+// img {
+//   width: 100%;
+// }
 a {
   text-decoration: none;
 }
@@ -117,133 +117,133 @@ a {
 .header {
   margin: 0 auto;
   height: 70px;
-&__main {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 2000px;
-  background-color: transparent;
-  height: 70px;
-  color: $secondary-color;
-  z-index: 3;
-}
-&__slide__down {
-  position: fixed;
-  top: 0%;
-  display: flex;
-  align-items: center;
-   justify-content: space-between;
-  max-width: 2000px;
-  width: 100%;
-  height: 70px;
-  background-color: #fff;
-  color: $dark-black;
-  z-index: 2;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  animation: navbar-slice-down 1s;
-  left: 50%;
-  transform: translate(-50%, 0);
+  &__main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 2000px;
+    background-color: transparent;
+    height: 70px;
+    color: $secondary-color;
+    z-index: 3;
+  }
+  &__slide__down {
+    position: fixed;
+    top: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 2000px;
+    width: 100%;
+    height: 70px;
+    background-color: #fff;
+    color: $dark-black;
+    z-index: 2;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    animation: navbar-slice-down 1s;
+    left: 50%;
+    transform: translate(-50%, 0);
 
+    li:hover::before {
+      content: "[";
+      animation: left-bracket;
+      animation-duration: 0.5s;
+      animation-timing-function: ease-out;
+      position: absolute;
+      animation-fill-mode: forwards;
+      color: $dark-black;
+    }
+    li:hover::after {
+      content: "]";
+      color: $dark-black;
+      animation: right-bracket;
+      animation-duration: 0.5s;
+      animation-timing-function: ease-out;
+      position: absolute;
+      animation-fill-mode: forwards;
+      color: $dark-black;
+    }
+  }
+  &__logo {
+    margin: 0 24px;
+    width: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__links {
+    padding: 0;
+    margin: 0 24px;
+  }
+  &__link__item {
+    display: inline-block;
+    padding: 8px;
+    margin: 0 12px;
+    cursor: pointer;
+  }
+  li {
+    position: relative;
+  }
   li:hover::before {
     content: "[";
+    color: $secondary-color;
     animation: left-bracket;
     animation-duration: 0.5s;
     animation-timing-function: ease-out;
     position: absolute;
     animation-fill-mode: forwards;
-    color: $dark-black;
   }
   li:hover::after {
     content: "]";
-    color: $dark-black;
+    color: $secondary-color;
     animation: right-bracket;
     animation-duration: 0.5s;
     animation-timing-function: ease-out;
     position: absolute;
     animation-fill-mode: forwards;
-    color: $dark-black;
   }
-}
-&__logo {
-  margin: 0 24px;
-  width: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  @keyframes navbar-slice-down {
+    0% {
+      top: -70px;
+    }
+    35% {
+      background-color: #fff;
+      color: #fff;
+    }
 
-&__links {
-  padding: 0;
-  margin: 0 24px;  
-}
-&__link__item{
-    display: inline-block;
-    padding: 8px;
-    margin: 0 12px;
-    cursor: pointer;
-}
-li {
-  position: relative;
-}
-li:hover::before {
-  content: "[";
-  color: $secondary-color;;
-  animation: left-bracket;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  position: absolute;
-  animation-fill-mode: forwards;
-}
-li:hover::after {
-  content: "]";
-  color: $secondary-color;;
-  animation: right-bracket;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  position: absolute;
-  animation-fill-mode: forwards;
-}
-@keyframes navbar-slice-down {
-  0% {
-    top: -70px;
+    100% {
+      background-color: #fff;
+    }
   }
-  35% {
-    background-color: #fff;
-    color: #fff;
-  }
+  @keyframes left-bracket {
+    0% {
+      left: -4px;
+      opacity: 0;
+      transform: rotate(90deg);
+    }
 
-  100% {
-    background-color: #fff;
+    100% {
+      left: -4px;
+      opacity: 1;
+      transform: rotate(0deg);
+    }
   }
-}
-@keyframes left-bracket {
-  0% {
-    left: -4px;
-    opacity: 0;
-    transform: rotate(90deg);
-  }
+  @keyframes right-bracket {
+    from {
+      right: -4px;
+      opacity: 0;
+      transform: rotate(-90deg);
+    }
 
-  100% {
-    left: -4px;
-    opacity: 1;
-    transform: rotate(0deg);
+    to {
+      right: -4px;
+      opacity: 1;
+      transform: rotate(0deg);
+    }
   }
-}
-@keyframes right-bracket {
-  from {
-    right: -4px;
-    opacity: 0;
-    transform: rotate(-90deg);
-  }
-
-  to {
-    right: -4px;
-    opacity: 1;
-    transform: rotate(0deg);
-  }
-}
 }
 
 //billboard__title__and__paragraph
@@ -256,98 +256,175 @@ li:hover::after {
   max-width: 1140px;
   &__svg {
     width: 50%;
-    padding: 2%;
     text-align: center;
   }
   &__title {
     width: 50%;
-    padding: 2%;
-   h1{
-    font-weight: bold;
-    color: $dark-blue;
-    font-size: 3.8em;
-    line-height: 1.2;
-   }
-   h2{
-    color: $lighter-black;
-    font-size: 1.2rem;
-    line-height: 2rem;
-    padding: $default-padding16 0;
-   }
+    padding: $default-padding20;
+    h1 {
+      font-weight: bold;
+      color: $dark-blue;
+      font-size: 3.8em;
+      line-height: 1.2;
+    }
+    h2 {
+      color: $lighter-black;
+      font-size: 1.2rem;
+      line-height: 2rem;
+      padding: $default-padding16 0;
+    }
   }
-  &__email{
+  &__email {
     display: flex;
     padding: $default-padding8 0;
-    input[type=text], input[type=submit] {
+    input[type="text"],
+    input[type="submit"] {
       width: 70%;
       padding: 12px;
       display: inline-block;
       border: 1px solid #ccc;
     }
-    input[type=submit] {
+    input[type="submit"] {
       background-color: $dark-blue;
       color: white;
       border: none;
       width: 30%;
       margin-left: 8px;
       cursor: pointer;
-     }
-    input[type=submit]:hover {
+    }
+    input[type="submit"]:hover {
       opacity: 0.8;
     }
   }
 }
 
-
-
-.three__card__container{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-	align-items: stretch;
-  align-content: stretch;
-&__wrapper{
-padding: $default-padding24;
-margin: $default-padding32;
-background-color: #fff;
-border-radius: 0.5rem;
-
-width: 300px;
-height: 480px;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-&__img__div{
-  text-align: center;
-}
-img{
-  width: 150px;
-  height: 150px;
+.three__card__container {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  max-width: 1140px;
+  padding: $default-padding32 0;
+  &__wrapper {
+    padding: $default-padding24;
+    margin: $default-padding32;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    width: 320px;
+    height: 480px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-h2{
-  font-size: 1.5rem;
-  padding: $default-padding8 0;
-  font-weight: 700;
-  color: #666666;
-}
-h3{
-  color: #AE3C43;
-  padding: $default-padding8 0;
-  font-weight: 600;
-}
-h6{
-  color: $light-gray;
-  padding: $default-padding8 0;
-  font-weight: 600;
-  text-decoration: underline;
-  cursor: pointer;
-}
-p{
-  padding: $default-padding8 0;
+
+  &__img__div {
+    text-align: center;
+  }
+  img {
+    width: 150px;
+    height: 150px;
+  }
+  h2 {
+    font-size: 1.5rem;
+    padding: $default-padding8 0;
+    font-weight: 700;
+    color: #666666;
+  }
+  h3 {
+    color: #ae3c43;
+    padding: $default-padding8 0;
+    font-weight: 600;
+  }
+  h6 {
+    color: $light-gray;
+    padding: $default-padding8 0;
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  p {
+    padding: $default-padding8 0;
+  }
 }
 
+#rocket {
+  animation: topBottom 5s infinite;
 }
+
+@keyframes topBottom {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, -200px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+#circle {
+  animation-name: rotateme;
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes rotateme {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.design__section {
+  img{
+    width: 100%;
+    display: block;
+  }
+  max-width: 2000px;
+  &__title {
+    text-align: center;
+    font-size: 1.2rem;
+    color: $light-gray;
+  }
+  &__subtitle {
+    text-align: center;
+    font-size: 3rem;
+  }
+  &__line {
+    text-align: center;
+    font-size: 2rem;
+  }
+  &__container {
+    display: flex;
+    margin: $default-padding32;
+
+    &__half{
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  
+    &__top__left{
+        padding: 0 8px 8px 16px;
+    }
+    &__bottom__left{
+      padding: 8px 8px 0 16px;
+    }
+    &__top__right{
+      padding: 0px 8px 8px 8px;
+    }
+    &__bottom__right{
+      padding: 8px 8px 0 8px;
+    }
+   
+      }
+    
+    }
+
+
+} 
 
 
 
@@ -465,101 +542,145 @@ p{
   text-align: right;
 }
 
-
 #red__circle {
-  animation: change-color  3s linear 2s infinite alternate;
+  animation: change-color 3s linear 2s infinite alternate;
 }
 
 @keyframes change-color {
-  0%   {fill:#E7515C}
-  100%   {fill:#AE3C43}
+  0% {
+    fill: #e7515c;
+  }
+  100% {
+    fill: #ae3c43;
+  }
 }
 
 #blue__circle {
-  animation: change-color-blue  1s linear 2s infinite alternate;
+  animation: change-color-blue 1s linear 2s infinite alternate;
 }
 
 @keyframes change-color-blue {
-  0%   {fill:#508EBC}
-  100%   {fill:#67C1EF}
+  0% {
+    fill: #508ebc;
+  }
+  100% {
+    fill: #67c1ef;
+  }
 }
 
 #light__blue__circle {
-  animation: change-color-blue-light  1s linear 2s infinite alternate;
+  animation: change-color-blue-light 1s linear 2s infinite alternate;
 }
 
 @keyframes change-color-blue-light {
-  0%   {fill:#67C1EF}
-  100%   {fill:#508EBC}
+  0% {
+    fill: #67c1ef;
+  }
+  100% {
+    fill: #508ebc;
+  }
 }
 
-#text1, #text6  {
-  animation: change-color-paragraph  1s linear 2s infinite alternate;
+#text1,
+#text6 {
+  animation: change-color-paragraph 1s linear 2s infinite alternate;
 }
 
- #text2, #text3  {
-  animation: change-color-paragraph  3s linear 2s infinite alternate;
+#text2,
+#text3 {
+  animation: change-color-paragraph 3s linear 2s infinite alternate;
 }
 
-#text4, #text5   {
-  animation: change-color-paragraph  3s linear 2s infinite alternate;
+#text4,
+#text5 {
+  animation: change-color-paragraph 3s linear 2s infinite alternate;
 }
 
 @keyframes change-color-paragraph {
-  0%   {fill:#dce6f4}
-  100%   {fill:#508EBC}
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508ebc;
+  }
 }
 
-#graph__column__one  {
-  animation: change-color-graph  3s linear 2s infinite alternate;
+#graph__column__one {
+  animation: change-color-graph 3s linear 2s infinite alternate;
 }
 
 @keyframes change-color-graph {
-  0%   {fill:#dce6f4}
-  100%   {fill:#AE3C43}
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #ae3c43;
+  }
 }
 
 #graph__column__two {
-  animation: change-color-graph-two  3s linear 3s infinite alternate;
+  animation: change-color-graph-two 3s linear 3s infinite alternate;
 }
 
 @keyframes change-color-graph-two {
-  0%   {fill:#dce6f4}
-  100%   {fill:#E7515C}
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #e7515c;
+  }
 }
 
-#graph__column__three, #graph__column__four, #graph__column__five {
-  animation: change-color-graph-three  3s linear 1s infinite alternate;
+#graph__column__three,
+#graph__column__four,
+#graph__column__five {
+  animation: change-color-graph-three 3s linear 1s infinite alternate;
 }
- #graph__column__four {
-  animation: change-color-graph-three  4s linear 2s infinite alternate;
+#graph__column__four {
+  animation: change-color-graph-three 4s linear 2s infinite alternate;
 }
- #graph__column__five {
-  animation: change-color-graph-three  6s linear 1s infinite alternate;
+#graph__column__five {
+  animation: change-color-graph-three 6s linear 1s infinite alternate;
 }
 
 @keyframes change-color-graph-three {
-  0%   {fill:#dce6f4}
-  100%   {fill:rgb(241, 177, 125)}
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: rgb(241, 177, 125);
+  }
 }
 
-
-#graph__column__six, #graph__column__seven   {
-  animation: change-color-graph-four  6s linear 1s infinite alternate;
+#graph__column__six,
+#graph__column__seven {
+  animation: change-color-graph-four 6s linear 1s infinite alternate;
 }
 
 @keyframes change-color-graph-four {
-  0%   {fill:#dce6f4}
-  100%   {fill: #508EBC}
+  0% {
+    fill: #dce6f4;
+  }
+  100% {
+    fill: #508ebc;
+  }
 }
 
-#light__bulb  {
-  animation: change-color-bulb  3s linear 1s infinite alternate;
+#light__bulb {
+  animation: change-color-bulb 3s linear 1s infinite alternate;
 }
 
 @keyframes change-color-bulb {
-  0%   {fill:#ff7f8e}
-  25%   {fill:#ff7f8e}
-  50%   {fill:#fff174}
-  100%   {fill: #fff174}
+  0% {
+    fill: #ff7f8e;
+  }
+  25% {
+    fill: #ff7f8e;
+  }
+  50% {
+    fill: #fff174;
+  }
+  100% {
+    fill: #fff174;
+  }
 }
